# EDP

./: .gitignore  README.md
apps/MES/backend/: README.md  main.py  pyproject.toml
apps/MES/backend/alembic/: env.py
apps/MES/backend/alembic/versions/: 3318fdc6a2cc_create_initial_tables_from_sqlmodel.py
apps/MES/backend/api/endpoints/: work_orders_router.py
apps/MES/backend/api/schemas/: work_order_schemas.py
apps/MES/backend/application/services/: work_order_app_service.py
apps/MES/backend/core/: dependencies.py
apps/MES/backend/domain/entities/: work_order.py
apps/MES/backend/domain/repositories/: work_order_repository.py
apps/MES/backend/domain/value_objects/: order_status.py
apps/MES/backend/infrastructure/database/: connection.py
apps/MES/backend/infrastructure/repositories/: in_memory_work_order_repository.py  sqlmodel_work_order_repository.py
apps/MES/backend/infrastructure/sqlmodels/: work_order.py
apps/MES/frontend/: package.json  pnpm-lock.yaml
